# web

./: .firebaserc  .gitignore  .travis.yml  DESIGN.md  LICENSE  NEWS.md  README.md  angular.json  build.js  build.sh  cfpages_build.sh  csv_to_script.py  database.rules.json  firebase.json  initial.taiwanv.sql  ngsw-config.json  package.json  tailwind.config.ts  tsconfig.json  vtuber.csv  vtubers.json  vtubers.schema.json
.github/: dependabot.yml
.github/workflows/: angular.yml  build.yml  rust.yml  web-dev.yml  web-pr.yml  web-prod.yml
dashboard/: index.html
etc/: install.sh  stream_list.service  stream_list.timer  stream_stat.service  stream_stat.timer  vtuber_stat.service  vtuber_stat.timer
functions/: .gitignore  package.json  tsconfig.json
functions/src/: admin.ts  api.ts  const.ts  database.ts  index.ts  logging.ts  middlewares.ts  models.ts  validate.ts  youtube.ts
functions/src/routes/: stats.ts  streams.ts  vtubers.ts
libs/: const.ts  models.ts  package.json
scripts/: .gitignore  Cargo.toml  build.example.rs
scripts/src/: channel_stat.rs  consts.rs  stream_list.rs  stream_stat.rs  types.rs  utils.rs  vtuber_stat.rs
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  holostats.example.toml  holostats.toml.j2  sqlx-data.json
server/holostats-api/: Cargo.toml  filters.rs  main.rs  reject.rs
server/holostats-api/pubsub/: mod.rs  publish.rs  tests.rs  verify.rs
server/holostats-api/sitemap/: mod.rs
server/holostats-api/v3/: channels_list.rs  channels_report.rs  mod.rs  streams_list.rs  streams_report.rs  tests.rs
server/holostats-api/v4/: channels_list.rs  channels_report.rs  live_chat.rs  mod.rs  stream_times.rs  streams_list.rs  streams_report.rs
server/holostats-channel-stat/: Cargo.toml  main.rs
server/holostats-config/: Cargo.toml  lib.rs
server/holostats-database/: Cargo.toml  channels.rs  lib.rs  live_chat.rs  macros.rs  notify.rs  query_builder.rs  statistic.rs  streams.rs
server/holostats-database/notify/: live_chat.rs  mod.rs
server/holostats-database/stream/: end_stream.rs  list_streams.rs  mod.rs  stream_times.rs  streams_last_updated.rs  upcoming_streams.rs  update_stream.rs  upsert_stream.rs
server/holostats-live-chat/: Cargo.toml  main.rs
server/holostats-live-chat/continuation/: continuation.rs  mod.rs
server/holostats-request/: Cargo.toml  channels.rs  lib.rs  otel.rs  pubsub.rs  rss.rs  streams.rs  thumbnail.rs  upload.rs
server/holostats-request/chat/: mod.rs  request.rs  response.rs
server/holostats-request/chat/proto/: continuation.proto  continuation.rs
server/holostats-request/chat/testdata/: clean.fish  close.json  invalidation.json  reload.json  timed1.json  timed2.json  timed3.json  timed4.json  timed5.json  timed6.json  timed7.json  unavailable.json
server/holostats-request/metadata/: mod.rs  response.rs
server/holostats-request/metadata/proto/: continuation.proto  continuation.rs  mod.rs
server/holostats-request/metadata/testdata/: timed1.json  timed2.json  waiting1.json  waiting2.json
server/holostats-rss-refresh/: Cargo.toml  main.rs
server/holostats-stream-metadata/: Cargo.toml  main.rs
server/holostats-stream-stat/: Cargo.toml  main.rs
server/holostats-subscribe/: Cargo.toml  main.rs
server/holostats-tracing/: Cargo.toml  lib.rs
server/holostats-utils/: Cargo.toml  tracing.rs
server/sql/: clean.sql  initial.sql  initial.sql.j2  initial.taiwanv.sql  schema.sql  test.sql
server/src/: channel_stat.rs  config.rs  consts.rs  error.rs  filters.rs  main.rs  reject.rs  stream_stat.rs  subscribe.rs  trace.rs  utils.rs  vtubers.rs  vtubers.rs.j2
server/src/api/: filters.rs  main.rs  reject.rs
server/src/api/pubsub/: mod.rs  publish.rs  verify.rs
server/src/api/sitemap/: mod.rs
server/src/api/tests/: channels_list.rs  mod.rs  streams_report.rs  utils.rs  xml.rs
server/src/api/v3/: channels_list.rs  channels_report.rs  mod.rs  streams_list.rs  streams_report.rs  youtube_notifications.rs
server/src/api/v4/: channels_list.rs  channels_report.rs  db.rs  mod.rs  streams_list.rs  streams_report.rs  youtube_notifications.rs
server/src/api_v3/: channels_list.rs  channels_report.rs  mod.rs  streams_list.rs  streams_report.rs  youtube_notifications.rs
server/src/channel_stat/: main.rs
server/src/database/: mod.rs  statistic.rs  streams.rs
server/src/requests/: channels.rs  mod.rs  pubsub.rs  rss.rs  streams.rs  thumbnail.rs  upload.rs  youtube.rs
server/src/rss_refresh/: main.rs
server/src/stream_stat/: main.rs
server/src/subscribe/: main.rs
server/src/tests/: channels_list.rs  mod.rs  streams_report.rs
server/systemd/: holostats_channel_stat.service  holostats_channel_stat.timer  holostats_rss.service  holostats_rss.timer  holostats_server.service  holostats_stream_stat.service  holostats_stream_stat.timer  install.sh
server1/: README.md  csv_to_script.py  rename_subs.py  requirements.txt  retrieve_videos.py  save_all_subs.py
server1/systemd/: taiwanv_channel_stat.service  taiwanv_channel_stat.timer
src/: index.html  main.server.ts  main.ts  manifest.webmanifest  polyfills.ts  providers.ts  utils.ts
src/app/: app.component.html  app.component.ts  models.ts  routes.ts
src/app/routes/: index.server.ts  index.ts  stream.ts  vtuber.ts
src/environments/: environment.prod.ts  environment.ts
src/i18n/: en.ts  es.ts  ja.ts  messages.json  ms.ts  zh.ts
src/styles/: _constants.scss  main.scss  theme.scss  utils.scss
tools/: bundle.mjs  env.mjs  inject.mjs
web/: .browserslistrc  .gitignore  angular.json  cfpages_build.sh  env.ts  index.json  ngsw-config.json  package.json  postbuild.mjs  proxy.conf.json  server.ts  tailwind.config.js  tsconfig.json  tsconfig.server.json  vtubers.json  vtubers.schema.json  vtubers.ts  vtubers.ts.j2  wrangler.toml
web/e2e/: codecept.conf.js  server.js  steps.d.ts  steps_file.js  tsconfig.json
web/src/: _theme.scss  _typography.scss  index.html  main.server.ts  main.ts  manifest.webmanifest  polyfills.ts  styles.scss  utils.ts
web/src/i18n/: en.ts  (+12 more)
web/workers/: main.ts  package.json  tsconfig.json
(+709 files in other folders)
