[package]
name = "holostats-script"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
futures-preview = "0.3.0-alpha.18"
isahc = { version = "0.7.6", default-features = false, features = ["json"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
tokio = "0.2.0-alpha.5"
url = "2.1.0"

[profile.release]
lto = true

[[bin]]
name = "stream_list"
path = "src/stream_list.rs"

[[bin]]
name = "stream_stat"
path = "src/stream_stat.rs"

[[bin]]
name = "vtuber_stat"
path = "src/vtuber_stat.rs"
