[package]
name = "holostats-script"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
futures = "0.3.1"
isahc = { version = "0.8.2", default-features = false, features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
tokio = { version = "0.2.10", features = ["macros"] }
url = "2.1.1"

[build-dependencies]
serde_json = "1.0.46"

[profile.release]
lto = true

[[bin]]
name = "stream_stat"
path = "src/stream_stat.rs"

[[bin]]
name = "channel_stat"
path = "src/channel_stat.rs"
