[workspace]
members = [
    "holostats-api",
    "holostats-channel-stat",
    "holostats-config",
    "holostats-database",
    "holostats-request",
    "holostats-rss-refresh",
    "holostats-stream-stat",
    "holostats-subscribe",
    "holostats-utils",
    "holostats-live-chat",
]

[profile.release]
lto = true
