[workspace]
members = [
    "holostats-api",
    "holostats-channel-stat",
    "holostats-config",
    "holostats-database",
    "holostats-live-chat",
    "holostats-request",
    "holostats-rss-refresh",
    "holostats-stream-metadata",
    "holostats-stream-stat",
    "holostats-subscribe",
    "holostats-tracing",
]

[profile.release]
lto = true
