[package]
name = "holostats-api"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "api"
path = "main.rs"

[dependencies]
anyhow = "1.0.51"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
hex = "0.4.3"
hmac = "0.11.0"
roxmltree = "0.14.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
serde_with = "1.11.0"
sha-1 = "0.9.8"
tokio = { version = "1.14.0", features = ["macros"] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
warp = { version = "0.3.2", default-features = false }
holostats-config = { path = "../holostats-config" }
holostats-database = { path = "../holostats-database" }
holostats-request = { path = "../holostats-request" }
holostats-tracing = { path = "../holostats-tracing" }

[dev-dependencies]
pretty_assertions = "1.1.0"
