[package]
name = "holostats-api"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "api"
path = "main.rs"

[dependencies]
anyhow = "1.0.53"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.0"
roxmltree = "0.14.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "1.12.0"
sha-1 = "0.10.0"
tokio = { version = "1.16.1", features = ["macros"] }
tracing = "0.1.30"
tracing-futures = "0.2.5"
warp = { version = "0.3.3", default-features = false }
holostats-config = { path = "../holostats-config" }
holostats-database = { path = "../holostats-database" }
holostats-request = { path = "../holostats-request" }
holostats-tracing = { path = "../holostats-tracing" }

[dev-dependencies]
pretty_assertions = "1.1.0"
