[package]
name = "holostats-channel-stat"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"

[[bin]]
name = "channel_stat"
path = "main.rs"

[dependencies]
anyhow = "1.0.43"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.10.0", features = ["macros"] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
holostats-config = { path = "../holostats-config" }
holostats-database = { path = "../holostats-database" }
holostats-request = { path = "../holostats-request" }
holostats-utils = { path = "../holostats-utils" }
