[package]
name = "holostats-database"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_with = "1.11.0"
sqlx = { version = "0.5.9", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono"
] }
tokio = { version = "1.14.0", features = ["macros"] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
sqlx-core = "0.5.9"
holostats-config = { path = "../holostats-config" }
futures-util = "0.3.18"
