[package]
name = "holostats-database"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1.12.0"
sqlx = { version = "0.6.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate"
] }
tokio = { version = "1.16.1", features = ["macros"] }
tracing = "0.1.30"
sqlx-core = "0.6.1"
holostats-config = { path = "../holostats-config" }
futures-util = "0.3.21"
