[package]
name = "holostats-live-chat"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "live_chat"
path = "main.rs"

[dependencies]
anyhow = "1.0.53"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
holostats-config = { path = "../holostats-config" }
holostats-database = { path = "../holostats-database" }
holostats-request = { path = "../holostats-request" }
holostats-tracing = { path = "../holostats-tracing" }
tokio = { version = "1.24.2", features = ["macros"] }
tracing = "0.1.30"

[dev-dependencies]
pretty_assertions = "1.1.0"
