[package]
name = "holostats-request"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0.53"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
hex = "0.4.3"
hmac = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1.12.0"
sha2 = "0.10.1"
tracing = "0.1.30"
reqwest = { version = "0.11.9", default-features = false, features = [
    "json",
    "rustls-tls"
] }
holostats-config = { path = "../holostats-config" }
holostats-tracing = { path = "../holostats-tracing" }

[dev-dependencies]
pretty_assertions = "1.2.1"
serde_json = "1.0.79"
