[package]
name = "holostats-subscribe"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"

[[bin]]
name = "subscribe"
path = "main.rs"

[dependencies]
anyhow = "1.0.51"
futures = "0.3.18"
tokio = { version = "1.14.0", features = ["macros"] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
holostats-config = { path = "../holostats-config" }
holostats-database = { path = "../holostats-database" }
holostats-request = { path = "../holostats-request" }
holostats-utils = { path = "../holostats-utils" }
