[package]
name = "holostats-subscribe"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "subscribe"
path = "main.rs"

[dependencies]
anyhow = "1.0.53"
futures = "0.3.21"
tokio = { version = "1.24.2", features = ["macros"] }
tracing = "0.1.30"
holostats-config = { path = "../holostats-config" }
holostats-database = { path = "../holostats-database" }
holostats-request = { path = "../holostats-request" }
holostats-tracing = { path = "../holostats-tracing" }
