[package]
name = "holostats-tracing"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.72"
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-newrelic = { git = "https://github.com/PoiScript/tracing-newrelic.git", rev = "838560a4acd346db2a9cfd1ca109518e5125ae5d" }
tracing-subscriber = { version = "0.3.5", default-features = false, features = [
    "registry"
] }
holostats-config = { path = "../holostats-config" }
